<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz</string>
    <string name="exit">Exit</string>
    <string name="error">ERROR</string>
    <string name="default_language">en</string>
    <string name="xml_prefix">q_</string>
    <string name="start_game">Start game</string>
    <string name="check_more_games">Check more games</string>
    <string name="check_more_games_url">http://www.google.com</string>
    <string name="rate_game">Rate game</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_levels">LevelsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="question">Question</string>
    <string name="score">score</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="tip">Tip</string>
    <string name="lock">Lock</string>
    <string name="answer">Answer</string>
    <string name="question_image">Question image</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="wrong_answer">Wrong answer!</string>
    <string name="reset_level">Reset level</string>
    <string name="exit_dialog_header">Exit</string>
    <string name="exit_dialog_text">Are you sure you want to exit?</string>
    <string name="positive_ans">Yes</string>
    <string name="negative_ans">No</string>

    <!-- Do not change during translation -->
    <string name="exercise_answers_buttons_weight">6</string>
    <string name="level_id">level_id</string>
    <string name="back_pressed">back_pressed</string>
    <string name="previous_exercise_id">previous_exercise_id</string>

</resources>