<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity" >

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/question"
        android:textSize="@dimen/question_font_size"
        android:layout_marginTop="50dp"
        android:visibility="gone" />
<!--         android:textAppearance="?android:attr/textAppearanceLarge" -->

    <ImageView
        android:id="@+id/imageQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/alert_dark_frame"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textSize="@dimen/exercise_button_font_size"
        android:layout_marginLeft="@dimen/exercise_buttons_margin"
        android:layout_marginBottom="@dimen/exercise_buttons_margin"
        android:background="@drawable/button_main"
        android:text="@string/back" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/exercise_button_font_size"
        android:layout_marginRight="@dimen/exercise_buttons_margin"
        android:layout_marginBottom="@dimen/exercise_buttons_margin"
        android:background="@drawable/button_main"
        android:text="@string/next" />

</RelativeLayout>